--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           style="border-radius: 10px"
         >
           <img
-            src="/Logo_GKS.png"
+            src="Logo_GKS.png"
             class="d-block mx-auto w-25 img-fluid"
             style="border-radius: 50%"
           />
